[package]
name = "broadsign-rt-pop-server"
version = "0.1.1"
authors = ["Alexandre Leblanc <a.leblanc@mrtryhard.info>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.11.0"
actix-rt = "2.11"
chrono = { version = "0.4.41",  features = ["serde"] }
env_logger = "0.11.6"
log = "0.4.27"
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = "1.0.225"
serde_derive = "1.0.217"
serde_json = "1.0.143"
r2d2 = "0.8.10"
r2d2_sqlite = "0.25"
